kubernetes/ingress-nginx/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-main
  namespace: dev
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
      - minikube.10.98.18.58.nip.io
    secretName: flask-app-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service-v1
            port: 
              number: 5050
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service-v1
            port: 
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: backend-service-v1
            port: 
              number: 5000
      - path: /error
        pathType: Prefix
        backend:
          service:
            name: backend-service-v1
            port: 
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-canary
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls: 
  - hosts: 
     - minikube.10.98.18.58.nip.io
    secretName: flask-app-tls
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service-v2
            port: 
              number: 5050
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /error
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
                number: 5000
