kubernetes/ingress-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: dev 
spec:
  ingressClassName: nginx
  rules:
  - host: flask-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 5050
      - path: /api/hello
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /metrics
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /error
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /api/data
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
      - path: /api/status
        pathType: Prefix
        backend:
          service:
            name: backend-service-v2
            port: 
              number: 5000
